--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
   
   
   <div class="content" id="map">
-    <h1>Search Page</h1>
+    <h1>Jing Wu</h1>
+    <h2>Search Page</h2>
     <br>
     <br>
     
